# adventure

./: README.md  pyproject.toml
app/: main.py
app/settings/: base.py  config.py  logger.py
assets/shaders/: simple.vert
config/: config.yaml  logger_config.yaml
